css/style.css
/* ... */
.borderFade:hover::after {
  opacity: 1;
  transform: translateY(0);
}

.circleScaleBtn3 {
  background-color: hsla(222, 100%, 95%, 0);
  color: hsla(0, 0%, 100%, 0.062);
  position: relative;
  border-radius: 6px;
  overflow: hidden;
  z-index: 0;
}

.circleScaleBtn3 span {
  z-index: 0;
  position: relative;
}

.circleScaleBtn3::before {
  content: "";
  position: absolute;
  top: 50%;
  left: 50%;
  width: 30vh;
  height: 30vh;
  border-radius: 50%;
  transform: translate3d(-50%, -50%, 0) scale3d(0, 0, 0);
  transition: opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1),
    transform 0.75s cubic-bezier(0.19, 1, 0.22, 1);
  background-color: hsla(0, 0%, 100%, 0.096);
  opacity: 0;
}

.circleScaleBtn3:hover span {
  color: hsl(222, 100%, 95%);
}

.circleScaleBtn3:hover::before {
  opacity: 1;
  transition-duration: 0.85s;
  transform: translate3d(-50%, -50%, 0) scale3d(1, 1, 1);
}

@media (min-width: 730px) {
  .close-btn {
    position: absolute;
    font-size: 0px;
    right: 26px;
    font-weight: 300;
    z-index: 2;
    cursor: pointer;
    top: 4px;
    line-height: 80px;
    visibility: hidden;
    pointer-events: none;
  }
}

@media (max-width: 729px) {
  .close-btn {
    position: absolute;
    font-size: 30px;
    right: 26px;
    font-weight: 300;
    z-index: 2;
    cursor: pointer;
    top: 4px;
    line-height: 80px;
    visibility: visible;
    pointer-events: all;
  }
}

#resize {
  z-index: 1;
  top: 0px;
  position: fixed;
  background: linear-gradient(
    to left,
    rgba(0, 0, 0, 0.9),
    rgba(0, 0, 0, 0.9),
    rgba(0, 0, 0, 0.9),
    rgba(0, 0, 0, 0.9),
    rgba(0, 0, 0, 0.9),
    rgba(0, 0, 0, 0.9),
    rgba(0, 0, 0, 0.70),
    rgba(0, 0, 0, 0.9),
    rgba(0, 0, 0, 0.9),
    rgba(0, 0, 0, 0.9),
    rgba(0, 0, 0, 0.9),
    rgba(0, 0, 0, 0.9),
    rgba(0, 0, 0, 0.9)
  );
  animation: move 60s linear infinite;
  width: 100%;
  height: 100%;
  visibility: hidden;
  opacity: 0;
  transition: all 0.25s ease-in-out;
  transition: 400ms ease-in-out;
}

#resize #menu {
  height: 100%;
  position: absolute;
  left: 32%;
  top: auto;
  transform: translateX(-30%);
  text-align: center;
  display: table-cell;
  vertical-align: center;
}

@media (max-width: 300px) {
  #resize #menu {
    height: 100px;
    position: absolute;
    left: 10%;
    top: auto;
    transform: translateX(-10%);
    text-align: center;
    display: table-cell;
    vertical-align: center;
  }
}

#resize #menu li {
  display: flex;
  text-align: center;
  padding: 15% 0%;
  min-height: 50px;
  cursor: pointer;
  transition: all 0.25s ease-in-out;
}

@media (max-width: 300px) {
  #resize #menu li {
    display: flex;
    text-align: center;
    padding: 10% 0%;
    min-height: 50px;
    cursor: pointer;
    transition: all 0.25s ease-in-out;
  }
}

#resize li:nth-child(1) {
  margin-top: 25vh;
}

#resize #menu li a {
  color: #fff;
  font-weight: 500;
}

#resize #menu li a:hover {
  text-decoration: none;
}

#resize.active {
  visibility: visible;
  opacity: 1;
}

@media (max-width: 729px) {
  #toggle {
    visibility: visible;
    opacity: 1;
    margin-top: 6px;
    margin-right: 4px;
  }

  nav #brand {
    margin-left: 24px;
  }

  #menu a {
    font-size: 23px;
    font-weight: 300;
  }

  #resize li span {
    font-weight: bolder;
  }

  nav #menu {
    display: none;
  }
}

@media (min-width: 730px) {
  #resize {
    visibility: hidden !important;
  }
}

.circleScaleBtn2 {
  background-color: hsla(222, 100%, 95%, 0);
  color: hsla(0, 0%, 100%, 0.062);
  position: relative;
  border-radius: 6px;
  overflow: hidden;
  z-index: 0;
}

.circleScaleBtn2 span {
  z-index: 0;
  position: relative;
}

.circleScaleBtn2::before {
  content: "";
  position: absolute;
  top: 50%;
  left: 50%;
  width: 30vh;
  height: 30vh;
  border-radius: 50%;
  transform: translate3d(-50%, -50%, 0) scale3d(0, 0, 0);
  transition: opacity 0.4s cubic-bezier(0.19, 1, 0.22, 1),
    transform 0.75s cubic-bezier(0.19, 1, 0.22, 1);
  background-color: hsla(0, 0%, 100%, 0.096);
  opacity: 0;
}

.circleScaleBtn2:hover span {
  color: hsl(222, 100%, 95%);
}

.circleScaleBtn2:hover::before {
  opacity: 1;
  transition-duration: 0.85s;
  transform: translate3d(-50%, -50%, 0) scale3d(1, 1, 1);
}

/*--------------- hero section --------------- */
.hero {
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

.hero h1 {
  text-align: center;
  letter-spacing: 0px;
  line-height: 50px;
}
.hero h5 {
  text-align: center;
  letter-spacing: 0px;
  line-height: 25px;
}
.hero h3 {
  text-align: center;
  letter-spacing: 0px;
  line-height: 40px;
}

@media (max-width: 250px) {
  .header h1 {
    font-size: 35px;
  }

  .header h5 {
    font-size: 35px;
  }
  .header h3 {
    font-size: 35px;
  }
}

/*--------------- scroll down icon animation --------------- */
.scroll-down {
  position: fixed;
  left: 48%;
  transform: translateX(-48px);
  top: 75%;
  display: block;
  align-items: center;
  font-size: 35px;
  z-index: 0;
  text-decoration: none;
  text-shadow: 0;
  width: 15px;
  height: 15px;
  -webkit-transform: translate(-50%, 0) rotate(0deg);
  animation: arrowAnimation 1.5s cubic-bezier(0.19, 1, 0.22, 1) infinite;
}

@keyframes arrowAnimation {
  0% {
    transform: translateY(-20px);
    opacity: 0;
  }
  30% {
    opacity: 1;
  }
  60% {
    opacity: 1;
  }
  to {
    -webkit-transform: translateY(10px);
    transform: translateY(10px);
    opacity: 0;
  }
}
/*--------------- type section --------------- */
h6 {
  text-align: center;
}

.vertical {
  margin-top: 40px;
  border-left: 1px solid #fff;
  height: 80px;
  position: absolute;
  left: 50%;
}

.type {
  height: 500px;
}

.type {
  background: url(../img/cybersec.png) no-repeat 50% 50%;
  background-size: cover;
}

.type2 {
  background: url(../img/activity.png) no-repeat 50% 50%;
  background-size: cover;
}

.type3 {
  background: url(../img/aboutme.png) no-repeat 50% 50%;
  background-size: cover;
}
/* ... */

